INTERIM-179 Fix numbered flexslider button alignment on safari (#201)

--- a/css/suitcase.css
+++ b/css/suitcase.css
@@ -1567,6 +1567,7 @@ ul.tabs.secondary img {
 }
 
 .flexslider-numbered .flex-pauseplay {
+  display: inline-flex;
   height: 2.5rem;
   margin-top: -2.5rem;
   left: 0;
